Added http service

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="header">
   <div><h1>Adhira clinic</h1></div>
   <div>
-    <button class="action-button">Billing</button>
-    <button class="action-button">Inventory</button>
-    <button class="action-button">Products</button>
+    <button class="action-button" routerLink="/billing">Billing</button>
+    <button class="action-button" routerLink="/inventory">Inventory</button>
+    <button class="action-button" routerLink="/product">Products</button>
   </div>
 </div>
 <router-outlet></router-outlet>
