--- a/app/src/app/product/product.component.html
+++ b/app/src/app/product/product.component.html
@@ -1,1 +1,9 @@
-<p>product works!</p>
+<div>
+  <h2>Products</h2>
+</div>
+<div>
+  <div>
+    <button>Add Product</button>
+  </div>
+  <table></table>
+</div>
