--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -28,6 +28,9 @@ body {
 .mr12 {
   margin-right: 12px;
 }
+.ml24 {
+  margin-left: 24px;
+}
 .ml48 {
   margin-left: 48px;
 }
@@ -78,4 +81,9 @@ body {
 
 .tac {
   text-align: center;
+}
+
+.big-button {
+  width: 100px;
+  height: 40px;
 }
