Added print page

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="m12">
   <div class="header">
-    <div><h1>Adhira clinic</h1></div>
+    <div><h1>Aadhira clinic</h1></div>
     <div>
       <button class="action-button" routerLink="/billing">Billing</button>
       <button class="action-button" routerLink="/inventory">Inventory</button>
