Added customer module

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -3,6 +3,7 @@
     <div><h1>Aadhira clinic</h1></div>
     <div>
       <button class="action-button" routerLink="/billing">Billing</button>
+      <button class="action-button" routerLink="/customer">Customer</button>
       <button class="action-button" routerLink="/inventory">Inventory</button>
       <button class="action-button" routerLink="/product">Products</button>
     </div>
