--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -105,3 +105,6 @@ body {
   width: 100px;
   height: 40px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
