--- a/app/src/app/product/product.component.html
+++ b/app/src/app/product/product.component.html
@@ -8,9 +8,33 @@
     </div>
     <div class="mt24">
       <table class="table-style1">
+        <thead>
+          <tr>
+            <th>Product</th>
+            <th></th>
+          </tr>
+        </thead>
         <tbody>
           <tr *ngFor="let product of products">
             <td>{{ product.name }}</td>
+            <td class="action-cell">
+              <div class="action-buttons">
+                <div class="mr24">
+                  <button mat-icon-button class="button-xs">
+                    <mat-icon>create</mat-icon>
+                  </button>
+                </div>
+                <div>
+                  <button
+                    mat-icon-button
+                    class="button-xs"
+                    (click)="deleteProduct(product)"
+                  >
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </div>
+              </div>
+            </td>
           </tr>
         </tbody>
       </table>
