Added Product update

--- a/app/src/app/product/product-crud/product-crud.component.html
+++ b/app/src/app/product/product-crud/product-crud.component.html
@@ -15,7 +15,10 @@
         <input type="text" id="shortName" [(ngModel)]="shortName" />
       </div>
       <div>
-        <button class="mr12" (click)="createProduct()">Create</button>
+        <button class="mr12" (click)="createProduct()">
+          <span *ngIf="isEdit">Update</span>
+          <span *ngIf="!isEdit">Create</span>
+        </button>
         <button routerLink="/product">Back</button>
       </div>
     </div>
