--- a/app/src/app/inventory/inventory.component.html
+++ b/app/src/app/inventory/inventory.component.html
@@ -15,6 +15,7 @@
             <th>Quantity</th>
             <th>Purchase Date</th>
             <th>Price</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -24,6 +25,28 @@
             <td>{{ inventory.quantity }}</td>
             <td>{{ inventory.purchaseDate | date: "dd-MM-yyyy" }}</td>
             <td>{{ inventory.sellingPricePerUnit }}</td>
+            <td class="action-cell">
+              <div class="action-buttons">
+                <div class="mr24">
+                  <button
+                    mat-icon-button
+                    class="button-xs"
+                    (click)="editInventory(inventory)"
+                  >
+                    <mat-icon>create</mat-icon>
+                  </button>
+                </div>
+                <div>
+                  <button
+                    mat-icon-button
+                    class="button-xs"
+                    (click)="deleteInventory(inventory)"
+                  >
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </div>
+              </div>
+            </td>
           </tr>
         </tbody>
       </table>
