Added inventory update

--- a/app/src/app/inventory/inventory-crud/inventory-crud.component.html
+++ b/app/src/app/inventory/inventory-crud/inventory-crud.component.html
@@ -24,7 +24,7 @@
         <br />
         <input type="number" min="0" id="quantity" [(ngModel)]="quantity" />
       </div>
-      <div class="mb24">
+      <!-- <div class="mb24">
         <label for="costPerUnit">Cost Per Unit</label>
         <br />
         <input
@@ -33,7 +33,7 @@
           id="costPerUnit"
           [(ngModel)]="costPerUnit"
         />
-      </div>
+      </div> -->
       <div class="mb24">
         <label for="sellingPricePerUnit">Selling Price Per Unit</label>
         <br />
