--- a/app/src/app/billing/print/print.component.html
+++ b/app/src/app/billing/print/print.component.html
@@ -2,7 +2,7 @@
   <table class="table-style2">
     <thead>
       <tr>
-        <td colspan="5" class="tac">Aadhira clinic</td>
+        <td colspan="5" class="tac">Adhira clinic</td>
       </tr>
       <tr>
         <th>SNo</th>
