--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,5 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
+@font-face {
+  font-family: "Roboto";
+  src: URL("./assets/fonts/Roboto-Medium.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Material Icons";
+  font-style: normal;
+  font-weight: 400;
+  src: url(./assets/fonts/MaterialIcons-Regular.ttf) format("truetype"),
+    url("./assets/fonts/MaterialIconsOutlined-Regular.otf") format("truetype");
+}
+
 html,
 body {
   margin: 0;
@@ -133,6 +146,7 @@ html,
 body {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
