--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="m12">
-  <div class="header">
+  <div class="header no-print">
     <div><h1>Adhira clinic</h1></div>
     <div>
       <button class="action-button" routerLink="/billing">Billing</button>
