Added dashboard module

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -6,6 +6,7 @@
       <button class="action-button" routerLink="/customer">Customer</button>
       <button class="action-button" routerLink="/inventory">Inventory</button>
       <button class="action-button" routerLink="/product">Products</button>
+      <button class="action-button" routerLink="/insights">Insights</button>
     </div>
   </div>
   <router-outlet></router-outlet>
