--- a/app/src/app/insights/dashboard/dashboard.component.html
+++ b/app/src/app/insights/dashboard/dashboard.component.html
@@ -11,6 +11,7 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
+      <button (click)="getRawBills()">Submit</button>
     </div>
     <table class="table-style1">
       <thead>
