--- a/app/src/app/insights/dashboard/dashboard.component.html
+++ b/app/src/app/insights/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
         <tr *ngFor="let bill of bills">
           <td>{{ bill.createdDate | date: "dd-MM-yyyy  h:mm" }}</td>
           <td>{{ bill.totalAmount }}</td>
-          <td><a href="/billing/print/{{ bill._id }}/true">View</a></td>
+          <td><a routerLink="/billing/print/{{ bill._id }}/true">View</a></td>
         </tr>
         <tfoot>
           <tr>
